# EGS_project

./: .gitignore  AGENTS.md  EGS_API_report.md  EpicGamesStoreAPIReport.md  PROGRESS.md  README.md  all_withtags.csv  crappy_temp_viz.py  df_api.csv  df_complete.csv  df_missings.csv  download_sheet.py  expansion.ipynb  missings.R  patch_clean_data.py  patch_data_collection.py  patch_data_collection_2.py  patch_spotcheck.py  patch_spotcheck_2.py  patch_wiki_scraper.py  pyproject.toml  requirements.txt  reviewget.ipynb  scraper_next.ipynb  second_scraper.ipynb  streamlit_brainstorm_NEW.rtf  tags_added.ipynb  try_limbo.py  try_raw_promos.py  try_raw_tags.py  working_scraper.ipynb
data/: 2026-04-21-gsheets.csv  2026-04-21-gsheets.xlsx  2026-04-21-wiki.csv  2026-04-23-gsheets.xlsx  2026-04-23-wiki-enriched.csv  2026-04-23-wiki.csv  2026-04-29-gsheets.xlsx  2026-04-29-wiki.csv  May2025.csv  cleaned_merged_data.csv  csvtry.xlsx  epic_free_games_with_api_details.csv  epic_games_data_with_api_details.csv  gamelist.parquet  jan_2_2024_excelexport.xlsx  jan_2_2024_sheets_download.csv  merge_hltb.csv  merge_mc.csv  wiki-enriched.csv
development/: R_EDA.qmd  clean_data.py  compartmentalized.py  data_collection.py  direct_egs_scraper.py  enrich_wiki_data.py  hltb_scraper.py  jules-viz.py  metacritic_scraper.py  old_reviewfetcher.py  scrape_hltb.py  scrape_sheet.py  scrape_tests.py  spotcheck.py  wiki_scraper.py
outputs/: abnormal_gameset.csv  direct_egs_scrape_results.csv  hltb_data.csv  hltb_report.md  metacritic_cache.json  metacritic_feasibility_report.md  metacritic_sample.csv  (+2 more)
(+17 files in other folders)
