[project]
name = "egs-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "epicstore-api>=0.2.0",
    "howlongtobeatpy>=1.0.21",
    "marimo>=0.23.2",
    "numpy>=2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
]
